--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>pierre_leroy</title>
+
+    <!-- <link rel="stylesheet" type="text/css" href="./sass.css" /> -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
+    
+    
+    <!-- CDN SCRIPTS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://otm.github.io/svg.path.js/spec/lib/svg.js"></script>
+    <script src="https://otm.github.io/svg.path.js/svg.path.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"></script>
+    <script src="https://tgomilar.github.io/paroller.js/dist/jquery.paroller.js"></script>
+
+    <title>Pierre Leroy</title>
   </head>
   <body>
     <noscript>
