--- a/public/index.html
+++ b/public/index.html
@@ -25,5 +25,6 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <!-- USING VUE CLI -->
   </body>
 </html>
