--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
     <script src="https://otm.github.io/svg.path.js/svg.path.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"></script>
     <script src="https://tgomilar.github.io/paroller.js/dist/jquery.paroller.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <title>Pierre Leroy</title>
   </head>
